[package]
name = "rlox-vm"
version = "0.1.0"
authors = ["Peter Ke <peterke0911@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_enum = "0.5.0"
lazy_static = "1.4.0"
paste = "0.1"
intrusive-collections = "0.9"

[profile.release]
opt-level = 3
